# image2table-workflow

./: .env.example  .gitignore  1.ipynb  CLAUDE.md  PROJECT_PROGRESS_SUMMARY.md  README.md  comprehensive_log_analysis.py  correct_real_api_test.py  data.py  final_test_report.py  pyproject.toml  simple_log_verification.py  test_log_parsing_fix.py  test_tracing_system_real_api.py  verify_tracing.py
.claude/: settings.local.json
.serena/: project.yml
docs/: FIX-003-VisualHighlighter-Coordinate-Alignment-Fix.md  QUICK-003-VisualHighlighter-Quick-Reference.md  TECH-003-VisualHighlighter-Implementation-Summary.md
logs/: trace_2025-12-05_13-20-30.jsonl  trace_2025-12-05_13-20-31.jsonl  trace_2025-12-05_13-20-35.jsonl  trace_2025-12-05_13-20-39.jsonl  trace_2025-12-05_13-32-48.jsonl  trace_2025-12-05_13-32-51.jsonl  trace_2025-12-05_13-32-55.jsonl  trace_2025-12-05_13-40-35.jsonl  trace_2025-12-05_13-40-40.jsonl  trace_2025-12-05_13-40-43.jsonl  trace_2025-12-05_13-45-43.jsonl  trace_2025-12-05_13-45-44.jsonl  trace_2025-12-05_13-45-47.jsonl  trace_2025-12-05_13-45-51.jsonl
scripts/: verify_autofit_highlighting.py  verify_highlighting.py
spec/: 001_core_interfaces_skeleton.md  004_implementation_report.md  004_scout_agent_implementation.md  005_table_rendering_implementation.md  006_planner_agent_implementation.md  007_config_management_implementation.md  008_tdd_implementation_report.md  010_sniper_agent_implementation.md  011_visual_highlighter_implementation.md  FIX-001-TableRenderer-Layout-Fix.md  README-AutoFit-Renderer.md  (+1 more)
tests/: __init__.py  test_config.py  (+10 more)
(+19 files in other folders)
