[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table2image-agent"
version = "0.1.0"
description = "Table2Image Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Table2Image Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fsspec>=2025.10.0",
    "huggingface-hub>=1.1.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/table2image/table2image-agent"
Repository = "https://github.com/table2image/table2image-agent"
Issues = "https://github.com/table2image/table2image-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/table2image_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
